show correct bank details adding form on mobile

--- a/src/constants.scss
+++ b/src/constants.scss
@@ -5,8 +5,8 @@ $header-height: 80px;
 $header-height-mobile: 60px;
 $share-z-index: 2;
 $header-z-index: 10;
-$dropdown-z-index: $header-z-index + 5;
-$date-picker-z-index: $dropdown-z-index + 1;
+$dropdown-z-index: $header-z-index - 1;
+$date-picker-z-index: $dropdown-z-index;
 $file-preview-z-index: $date-picker-z-index + 1;
 $secondary-modal-z-index: 20;
 $notifications-container-z-index: $secondary-modal-z-index + 5;
